rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_strnote_lowercase.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:c
Note { pitch: C, accs: [], octave: None, cents: None }
display:c
