rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_stroctave_positive.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C4
Note { pitch: C, accs: [], octave: Some(4), cents: None }
display:c4
